@@ -125,10 +125,6 @@ namespace KJS {
         CollectorHeap numberHeap;
         ProtectCountSet protectedValues;
         HashSet<ArgList*>* m_markListSet;
-
-#if PLATFORM(UNIX)
-        const size_t m_pagesize;
-#endif
     };
 
     // tunable parameters
